Fix color on mobile (2/2)

--- a/src/app/features/sidebar/SideBar.module.scss
+++ b/src/app/features/sidebar/SideBar.module.scss
@@ -26,7 +26,7 @@
         background-color: #353a40;
 
         @media screen and (max-width: 460px) {
-            color: "white";
+            color: "white" !important;
         }
     }
 }
